# arbitrage-sports-betting

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/arbitrage/: IOddsProcessor.h  IOddsProvider.h
include/arbitrage/containers/: BaseContainer.h  MoneylineContainer.h  PlayerPropsContainer.h  SpreadContainer.h  TotalsContainer.h
include/arbitrage/http/: HttpClient.h  IHttpClient.h
include/arbitrage/logging/: ILogger.h  Logger.h
include/arbitrage/models/: AllOdds.h  Bookmaker.h  Event.h  Market.h  Outcome.h
include/arbitrage/parsing/: IJsonParser.h  JsonParser.h
include/arbitrage/processors/: ArbitrageProcessor.h  SimpleArbitrageProcessor.h
include/arbitrage/providers/: FakeOddsProvider.h  OddsApiProvider.h
src/: CMakeLists.txt  main.cpp
src/containers/: BaseContainer.cpp  MoneylineContainer.cpp  PlayerPropsContainer.cpp  SpreadContainer.cpp  TotalsContainer.cpp
src/http/: HttpClient.cpp
src/logging/: Logger.cpp
src/parsing/: JsonParser.cpp
src/processors/: ArbitrageProcessor.cpp  SimpleArbitrageProcessor.cpp
src/providers/: FakeOddsProvider.cpp  OddsApiProvider.cpp
